--- a/about.html
+++ b/about.html
@@ -159,6 +159,7 @@
       margin-top: 40px;
       position: relative;
       animation: fadeSlideDown 1s ease;
+      padding: 0 20px;
     }
 
     @keyframes fadeSlideDown {
@@ -199,6 +200,7 @@
       position: relative;
       top: 0;
       animation: glowLine 2s infinite alternate;
+      min-width: 20px;
     }
 
     @keyframes glowLine {
@@ -478,14 +480,15 @@
     .image-container {
       position: relative;
       display: inline-block;
+      max-width: 100%;
     }
 
     .image-container img {
-  width: 100%;
-  height: auto;
-  filter: drop-shadow(0 0 20px rgba(255, 0, 0, 0.7)); /* red shadow glow */
-}
-
+      width: 100%;
+      height: auto;
+      max-width: 500px;
+      filter: drop-shadow(0 0 20px rgba(255, 0, 0, 0.7));
+    }
 
     /* Image Labels */
     .image-label {
@@ -606,7 +609,36 @@
       opacity: 0.9;
     }
 
-    /* Responsive */
+    /* Responsive Design */
+    @media (max-width: 1024px) {
+      .about-container {
+        width: 88%;
+        gap: 40px;
+        margin: 60px auto;
+      }
+
+      .hello-title,
+      .name-title {
+        font-size: 3.5em;
+      }
+
+      .body-text {
+        font-size: 1.05em;
+      }
+
+      .label-1 {
+        left: -35px;
+      }
+
+      .label-2 {
+        right: -35px;
+      }
+
+      .label-3 {
+        left: -35px;
+      }
+    }
+
     @media (max-width: 768px) {
       .back-home-btn {
         padding: 8px 16px;
@@ -620,6 +652,7 @@
         right: 80px;
         width: 45px;
         height: 45px;
+        font-size: 1.3em;
       }
 
       .menu-icon {
@@ -627,26 +660,321 @@
         right: 20px;
       }
 
+      .menu-icon div {
+        width: 28px;
+      }
+
+      .nav-menu {
+        width: 280px;
+        padding: 80px 25px;
+      }
+
+      header {
+        margin-top: 30px;
+        padding: 0 15px;
+      }
+
       .about-title {
         font-size: 1.5em;
+        padding: 10px 25px;
       }
 
-      .hello-title, .name-title {
-        font-size: 2.5em;
-      }
-
-      .body-text {
-        font-size: 1em;
+      .header-line {
+        min-width: 15px;
       }
 
       .about-container {
         width: 90%;
         gap: 30px;
+        margin: 50px auto;
+        flex-direction: column;
       }
 
-      .label-1, .label-2, .label-3 {
+      .about-text {
+        min-width: 100%;
+        padding: 15px;
+        order: 2;
+      }
+
+      .hello-title,
+      .name-title {
+        font-size: 2.5em;
+      }
+
+      .body-text {
+        font-size: 1em;
+        line-height: 1.7;
+      }
+
+      .image-section {
+        min-width: 100%;
+        order: 1;
+      }
+
+      .image-container img {
+        max-width: 400px;
+      }
+
+      .image-label {
         font-size: 0.8em;
         padding: 6px 15px;
+      }
+
+      .label-1 {
+        left: -25px;
+        top: 35%;
+      }
+
+      .label-2 {
+        right: -25px;
+        top: 55%;
+      }
+
+      .label-3 {
+        left: -25px;
+        top: 75%;
+      }
+
+      .back-to-top {
+        width: 45px;
+        height: 45px;
+        bottom: 30px;
+        right: 30px;
+        font-size: 1.3em;
+      }
+
+      footer {
+        margin-top: 60px;
+        padding: 25px 15px;
+      }
+
+      footer .social-icons img {
+        width: 26px;
+        margin: 0 6px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .back-home-btn {
+        padding: 6px 12px;
+        font-size: 0.85em;
+        top: 15px;
+        left: 15px;
+        gap: 3px;
+      }
+
+      .theme-toggle {
+        top: 15px;
+        right: 65px;
+        width: 40px;
+        height: 40px;
+        font-size: 1.2em;
+      }
+
+      .menu-icon {
+        top: 15px;
+        right: 15px;
+      }
+
+      .menu-icon div {
+        width: 25px;
+        height: 2.5px;
+        margin: 5px 0;
+      }
+
+      .nav-menu {
+        width: 250px;
+        padding: 70px 20px;
+        right: -270px;
+      }
+
+      .home-dropdown-btn,
+      .about-btn {
+        font-size: 1.1em;
+        padding: 12px 8px;
+      }
+
+      .submenu a {
+        font-size: 0.9em;
+        padding: 10px 8px;
+      }
+
+      header {
+        margin-top: 20px;
+        padding: 0 10px;
+      }
+
+      .about-title {
+        font-size: 1.3em;
+        padding: 8px 20px;
+      }
+
+      .header-line {
+        min-width: 10px;
+        height: 4px;
+      }
+
+      .about-container {
+        width: 92%;
+        gap: 25px;
+        margin: 40px auto;
+      }
+
+      .about-text {
+        padding: 10px;
+      }
+
+      .hello-title,
+      .name-title {
+        font-size: 2em;
+        letter-spacing: 1px;
+      }
+
+      .body-text {
+        font-size: 0.95em;
+        line-height: 1.6;
+        text-align: left;
+      }
+
+      .image-container img {
+        max-width: 280px;
+      }
+
+      .image-label {
+        font-size: 0.7em;
+        padding: 5px 12px;
+      }
+
+      .label-1 {
+        left: 0;
+        top: 30%;
+      }
+
+      .label-2 {
+        right: 0;
+        top: 50%;
+      }
+
+      .label-3 {
+        left: 0;
+        top: 70%;
+      }
+
+      .image-sparkle {
+        width: 4px;
+        height: 4px;
+      }
+
+      .back-to-top {
+        width: 40px;
+        height: 40px;
+        bottom: 20px;
+        right: 20px;
+        font-size: 1.2em;
+      }
+
+      footer {
+        margin-top: 50px;
+        padding: 25px 15px;
+        font-size: 0.9em;
+      }
+
+      footer .social-icons img {
+        width: 24px;
+        margin: 0 5px;
+      }
+
+      footer .quote {
+        font-size: 0.9em;
+      }
+    }
+
+    @media (max-width: 360px) {
+      .back-home-btn {
+        padding: 5px 10px;
+        font-size: 0.8em;
+      }
+
+      .theme-toggle {
+        width: 38px;
+        height: 38px;
+        right: 60px;
+        font-size: 1.1em;
+      }
+
+      .about-title {
+        font-size: 1.1em;
+        padding: 8px 15px;
+      }
+
+      .hello-title,
+      .name-title {
+        font-size: 1.8em;
+      }
+
+      .body-text {
+        font-size: 0.9em;
+      }
+
+      .image-container img {
+        max-width: 240px;
+      }
+
+      .image-label {
+        font-size: 0.65em;
+        padding: 4px 10px;
+      }
+
+      .nav-menu {
+        width: 220px;
+        right: -240px;
+      }
+    }
+
+    /* Landscape orientation adjustments */
+    @media (max-height: 500px) and (orientation: landscape) {
+      header {
+        margin-top: 20px;
+      }
+
+      .about-container {
+        margin: 30px auto;
+        gap: 30px;
+        flex-direction: row;
+      }
+
+      .hello-title,
+      .name-title {
+        font-size: 2.2em;
+      }
+
+      .body-text {
+        font-size: 0.95em;
+        line-height: 1.5;
+      }
+
+      .image-container img {
+        max-width: 300px;
+      }
+
+      .nav-menu {
+        padding: 60px 20px;
+      }
+
+      footer {
+        margin-top: 40px;
+      }
+    }
+
+    /* Tablet landscape specific */
+    @media (min-width: 769px) and (max-width: 1024px) and (orientation: landscape) {
+      .about-container {
+        flex-direction: row;
+      }
+
+      .about-text,
+      .image-section {
+        flex: 1;
       }
     }
   </style>
