--- a/evidence.html
+++ b/evidence.html
@@ -198,102 +198,6 @@
       transform: rotate(-45deg) translate(8px, -8px);
     }
 
-    /* ==== Header ==== */
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-top: 40px;
-      position: relative;
-      animation: fadeSlideDown 1s ease;
-    }
-
-    @keyframes fadeSlideDown {
-      from {
-        opacity: 0;
-        transform: translateY(-30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .evidence-title {
-      background-color: #8b0a0a;
-      color: white;
-      font-weight: bold;
-      font-size: 2em;
-      border-radius: 10px;
-      padding: 10px 30px;
-      border: 2px solid #d4af37;
-      text-align: center;
-      z-index: 1;
-      position: relative;
-      box-shadow: 0 5px 20px rgba(212, 175, 55, 0.3);
-      transition: transform 0.3s ease;
-    }
-
-    .evidence-title:hover {
-      transform: scale(1.05);
-      text-shadow: 0 0 10px #f4d03f;
-    }
-
-    .header-line {
-      flex: 1;
-      height: 5px;
-      background: linear-gradient(to right, #d4af37, #8b0a0a, #d4af37);
-      position: relative;
-      top: 0;
-      animation: glowLine 2s infinite alternate;
-    }
-
-    @keyframes glowLine {
-      0% {
-        opacity: 0.7;
-      }
-      100% {
-        opacity: 1;
-        filter: drop-shadow(0 0 8px #f4d03f);
-      }
-    }
-
-    /* ==== Hamburger Menu ==== */
-    .menu-icon {
-      position: fixed;
-      top: 40px;
-      right: 40px;
-      cursor: pointer;
-      z-index: 1001;
-      transition: transform 0.3s ease;
-    }
-
-    .menu-icon:hover {
-      transform: scale(1.1);
-    }
-
-    .menu-icon div {
-      width: 30px;
-      height: 3px;
-      background-color: #f4d03f;
-      margin: 6px 0;
-      border-radius: 2px;
-      transition: 0.4s ease;
-      box-shadow: 0 0 5px #d4af37;
-    }
-
-    .menu-icon.active div:nth-child(1) {
-      transform: rotate(45deg) translate(8px, 8px);
-    }
-
-    .menu-icon.active div:nth-child(2) {
-      opacity: 0;
-    }
-
-    .menu-icon.active div:nth-child(3) {
-      transform: rotate(-45deg) translate(8px, -8px);
-    }
-
     /* ==== Navigation Menu ==== */
     .nav-menu {
       position: fixed;
@@ -416,12 +320,85 @@
       text-shadow: 0 0 15px #f4d03f;
     }
 
+    /* ==== Header ==== */
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 40px;
+      position: relative;
+      animation: fadeSlideDown 1s ease;
+      padding: 0 20px;
+    }
+
+    @keyframes fadeSlideDown {
+      from {
+        opacity: 0;
+        transform: translateY(-30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .evidence-title {
+      background-color: #8b0a0a;
+      color: white;
+      font-weight: bold;
+      font-size: 2em;
+      border-radius: 10px;
+      padding: 10px 30px;
+      border: 2px solid #d4af37;
+      text-align: center;
+      z-index: 1;
+      position: relative;
+      box-shadow: 0 5px 20px rgba(212, 175, 55, 0.3);
+      transition: transform 0.3s ease;
+    }
+
+    .evidence-title:hover {
+      transform: scale(1.05);
+      text-shadow: 0 0 10px #f4d03f;
+    }
+
+    .header-line {
+      flex: 1;
+      height: 5px;
+      background: linear-gradient(to right, #d4af37, #8b0a0a, #d4af37);
+      position: relative;
+      top: 0;
+      animation: glowLine 2s infinite alternate;
+      min-width: 20px;
+    }
+
+    @keyframes glowLine {
+      0% {
+        opacity: 0.7;
+      }
+      100% {
+        opacity: 1;
+        filter: drop-shadow(0 0 8px #f4d03f);
+      }
+    }
+
     /* ==== Section Container ==== */
     .section-container {
       width: 90%;
       max-width: 1200px;
       margin: 60px auto;
       animation: fadeSlideUp 1s ease 0.6s both;
+    }
+
+    @keyframes fadeSlideUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .section-title {
@@ -526,6 +503,7 @@
       justify-content: center;
       gap: 10px;
       margin-top: 20px;
+      flex-wrap: wrap;
     }
 
     .dot {
@@ -648,7 +626,24 @@
       opacity: 0.9;
     }
 
-    /* Responsive */
+    /* Responsive Design */
+    @media (max-width: 1024px) {
+      .field-study-gallery {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 25px;
+      }
+
+      .section-title {
+        font-size: 1.8em;
+        padding: 12px 25px;
+      }
+
+      .carousel-container {
+        max-width: 600px;
+        padding: 35px 18px;
+      }
+    }
+
     @media (max-width: 768px) {
       .back-home-btn {
         padding: 8px 16px;
@@ -662,6 +657,7 @@
         right: 80px;
         width: 45px;
         height: 45px;
+        font-size: 1.3em;
       }
 
       .menu-icon {
@@ -669,16 +665,332 @@
         right: 20px;
       }
 
+      .menu-icon div {
+        width: 28px;
+      }
+
+      .nav-menu {
+        width: 280px;
+        padding: 80px 25px;
+      }
+
+      header {
+        margin-top: 30px;
+        padding: 0 15px;
+      }
+
       .evidence-title {
         font-size: 1.5em;
+        padding: 10px 25px;
+      }
+
+      .header-line {
+        min-width: 15px;
+      }
+
+      .section-container {
+        width: 92%;
+        margin: 40px auto;
+      }
+
+      .section-title {
+        font-size: 1.5em;
+        padding: 12px 20px;
+        margin-bottom: 30px;
+      }
+
+      .carousel-container {
+        max-width: 100%;
+        padding: 30px 15px;
+      }
+
+      .carousel-note {
+        font-size: 1em;
+        margin-bottom: 15px;
+      }
+
+      .carousel-image {
+        height: 300px;
+      }
+
+      .carousel-btn {
+        width: 45px;
+        height: 45px;
+        font-size: 1.3em;
+      }
+
+      .carousel-btn.prev {
+        left: 8px;
+      }
+
+      .carousel-btn.next {
+        right: 8px;
+      }
+
+      .dot {
+        width: 10px;
+        height: 10px;
+      }
+
+      .field-study-gallery {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 20px;
+        margin-top: 30px;
+      }
+
+      .field-study-image {
+        height: 250px;
+      }
+
+      .back-to-top {
+        width: 45px;
+        height: 45px;
+        bottom: 30px;
+        right: 30px;
+        font-size: 1.3em;
+      }
+
+      footer {
+        margin-top: 60px;
+        padding: 25px 15px;
+      }
+
+      footer .social-icons img {
+        width: 26px;
+        margin: 0 6px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .back-home-btn {
+        padding: 6px 12px;
+        font-size: 0.85em;
+        top: 15px;
+        left: 15px;
+        gap: 3px;
+      }
+
+      .theme-toggle {
+        top: 15px;
+        right: 65px;
+        width: 40px;
+        height: 40px;
+        font-size: 1.2em;
+      }
+
+      .menu-icon {
+        top: 15px;
+        right: 15px;
+      }
+
+      .menu-icon div {
+        width: 25px;
+        height: 2.5px;
+        margin: 5px 0;
+      }
+
+      .nav-menu {
+        width: 250px;
+        padding: 70px 20px;
+        right: -270px;
+      }
+
+      .home-dropdown-btn,
+      .about-btn {
+        font-size: 1.1em;
+        padding: 12px 8px;
+      }
+
+      .submenu a {
+        font-size: 0.9em;
+        padding: 10px 8px;
+      }
+
+      header {
+        margin-top: 20px;
+        padding: 0 10px;
+      }
+
+      .evidence-title {
+        font-size: 1.3em;
+        padding: 8px 20px;
+      }
+
+      .header-line {
+        min-width: 10px;
+        height: 4px;
+      }
+
+      .section-container {
+        width: 95%;
+        margin: 30px auto;
+      }
+
+      .section-title {
+        font-size: 1.3em;
+        padding: 10px 15px;
+        margin-bottom: 25px;
+      }
+
+      .carousel-container {
+        padding: 25px 12px;
+        border-radius: 15px;
+      }
+
+      .carousel-note {
+        font-size: 0.95em;
+        margin-bottom: 12px;
+      }
+
+      .carousel-wrapper {
+        border-radius: 12px;
+        border-width: 2px;
       }
 
       .carousel-image {
         height: 250px;
       }
 
+      .carousel-btn {
+        width: 40px;
+        height: 40px;
+        font-size: 1.2em;
+      }
+
+      .carousel-btn.prev {
+        left: 5px;
+      }
+
+      .carousel-btn.next {
+        right: 5px;
+      }
+
+      .carousel-dots {
+        gap: 8px;
+        margin-top: 15px;
+      }
+
+      .dot {
+        width: 9px;
+        height: 9px;
+      }
+
+      .field-study-gallery {
+        grid-template-columns: 1fr;
+        gap: 18px;
+        margin-top: 25px;
+      }
+
+      .field-study-card {
+        padding: 12px;
+      }
+
+      .field-study-image {
+        height: 220px;
+      }
+
+      .back-to-top {
+        width: 40px;
+        height: 40px;
+        bottom: 20px;
+        right: 20px;
+        font-size: 1.2em;
+      }
+
+      footer {
+        margin-top: 50px;
+        padding: 25px 15px;
+        font-size: 0.9em;
+      }
+
+      footer .social-icons img {
+        width: 24px;
+        margin: 0 5px;
+      }
+
+      footer .quote {
+        font-size: 0.9em;
+      }
+    }
+
+    @media (max-width: 360px) {
+      .back-home-btn {
+        padding: 5px 10px;
+        font-size: 0.8em;
+      }
+
+      .theme-toggle {
+        width: 38px;
+        height: 38px;
+        right: 60px;
+        font-size: 1.1em;
+      }
+
+      .evidence-title {
+        font-size: 1.1em;
+        padding: 8px 15px;
+      }
+
       .section-title {
-        font-size: 1.5em;
+        font-size: 1.2em;
+        padding: 10px 12px;
+      }
+
+      .carousel-image {
+        height: 200px;
+      }
+
+      .carousel-btn {
+        width: 35px;
+        height: 35px;
+        font-size: 1.1em;
+      }
+
+      .field-study-image {
+        height: 200px;
+      }
+
+      .nav-menu {
+        width: 220px;
+        right: -240px;
+      }
+    }
+
+    /* Landscape orientation adjustments */
+    @media (max-height: 500px) and (orientation: landscape) {
+      header {
+        margin-top: 20px;
+      }
+
+      .section-container {
+        margin: 30px auto;
+      }
+
+      .carousel-image {
+        height: 280px;
+      }
+
+      .field-study-image {
+        height: 220px;
+      }
+
+      .nav-menu {
+        padding: 60px 20px;
+      }
+
+      footer {
+        margin-top: 40px;
+      }
+    }
+
+    /* Tablet landscape specific */
+    @media (min-width: 769px) and (max-width: 1024px) and (orientation: landscape) {
+      .field-study-gallery {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      .carousel-container {
+        max-width: 650px;
       }
     }
   </style>
@@ -860,11 +1172,11 @@
     // Carousel functionality
     const carouselImages = [
       'class.image/received_1303551021216575.jpeg',
-      'class.image/received_1139148694269721.jpeg',  // Replace with your first image URL
-      'class.image/received_1273834174761476.jpeg',  // Replace with your second image URL
-      'class.image/IMG_20250923_130446.jpg',  // Replace with your third image URL
-      'class.image/1758607524686.jpg',  // Replace with your fourth image URL
-      'class.image/IMG_20250923_130244.jpg',   // Replace with your fifth image URL
+      'class.image/received_1139148694269721.jpeg',
+      'class.image/received_1273834174761476.jpeg',
+      'class.image/IMG_20250923_130446.jpg',
+      'class.image/1758607524686.jpg',
+      'class.image/IMG_20250923_130244.jpg',
       'class.image/IMG_20250903_131949.jpg',
       'class.image/IMG_20250903_130439.jpg',
       'class.image/IMG_20250908_132427.jpg',
