--- a/index.html
+++ b/index.html
@@ -1288,6 +1288,51 @@
             animation: slideUp 0.8s ease forwards;
         }
 
+        /* Tablet Landscape */
+        @media (max-width: 1024px) {
+            .landing-container {
+                gap: 2rem;
+                padding: 3rem 1.5rem;
+            }
+
+            .landing-content h1 {
+                font-size: clamp(2.5rem, 4vw, 3.5rem);
+            }
+
+            .landing-content h2 {
+                font-size: clamp(2.5rem, 4vw, 3.5rem);
+            }
+
+            .girl-image-placeholder {
+                max-width: 350px;
+                height: 450px;
+            }
+
+            .dropdown-menu {
+                min-width: 500px;
+                padding: 2.5rem;
+                gap: 1.2rem;
+            }
+
+            .golden-door {
+                width: 250px;
+                height: 350px;
+            }
+
+            .second-girl-placeholder img {
+                height: 440px;
+            }
+
+            .carousel-card {
+                min-width: 350px;
+            }
+
+            .contact-container h2 {
+                font-size: clamp(2.5rem, 4vw, 3.5rem);
+            }
+        }
+
+        /* Tablet Portrait */
         @media (max-width: 768px) {
             .nav-links {
                 display: none;
@@ -1297,20 +1342,151 @@
                 display: block;
             }
 
+            header {
+                padding: 0.75rem 1.5rem;
+            }
+
+            .header-container {
+                gap: 1rem;
+            }
+
+            .logo-placeholder {
+                width: 40px;
+                height: 40px;
+            }
+
+            .landing-section {
+                padding-top: 80px;
+            }
+
             .landing-container {
                 grid-template-columns: 1fr;
+                padding: 2rem 1.5rem;
+                gap: 2rem;
             }
 
             .landing-content {
                 text-align: center;
+                order: 1;
             }
 
-            .contact-grid {
-                grid-template-columns: 1fr;
+            .girl-image-placeholder {
+                order: 2;
+                max-width: 300px;
+                height: 400px;
+            }
+
+            .landing-content h1 {
+                font-size: clamp(2rem, 6vw, 3rem);
+                margin-bottom: 0.75rem;
+            }
+
+            .landing-content h2 {
+                font-size: clamp(2rem, 6vw, 3rem);
+                margin-bottom: 1.5rem;
+            }
+
+            .landing-content .year {
+                font-size: 2rem;
+            }
+
+            .landing-content .subtitle {
+                font-size: 1.2rem;
+                margin-bottom: 1.5rem;
+            }
+
+            .student-info h3 {
+                font-size: 1.5rem;
+            }
+
+            .student-info p {
+                font-size: 1.1rem;
+            }
+
+            .golden-section {
+                padding: 4rem 1.5rem;
+            }
+
+            .golden-door {
+                width: 220px;
+                height: 300px;
+            }
+
+            .second-girl-placeholder img {
+                height: 380px;
+            }
+
+            .golden-section h3 {
+                font-size: 2rem;
+                margin-bottom: 1rem;
+            }
+
+            .golden-section h4 {
+                font-size: 1.1rem;
+                padding: 0 1rem;
             }
 
             .decorative-line-left, .decorative-line-right {
                 display: none;
+            }
+
+            .carousel-card {
+                min-width: 320px;
+            }
+
+            .carousel-image-placeholder {
+                height: 250px;
+            }
+
+            .campus-content h2 {
+                font-size: 2rem;
+                margin-bottom: 1.5rem;
+            }
+
+            .campus-text-box {
+                padding: 2rem 1.5rem;
+                border-radius: 20px;
+            }
+
+            .campus-text-box p {
+                font-size: 0.95rem;
+                line-height: 1.7;
+            }
+
+            .read-more-btn {
+                padding: 0.6rem 1.5rem;
+                font-size: 0.95rem;
+            }
+
+            .contact-section {
+                padding: 4rem 1.5rem;
+            }
+
+            .contact-container {
+                padding-top: 2rem;
+            }
+
+            .contact-container h2 {
+                font-size: clamp(2.5rem, 6vw, 3rem);
+                margin-bottom: 3rem;
+            }
+
+            .contact-grid {
+                grid-template-columns: 1fr;
+                gap: 2.5rem;
+            }
+
+            .contact-item h3 {
+                font-size: 2.5rem;
+            }
+
+            .contact-item p {
+                font-size: 1.3rem;
+            }
+
+            .footer {
+                font-size: 1.3rem;
+                padding-top: 2.5rem;
             }
 
             .dropdown-menu {
@@ -1324,11 +1500,439 @@
             .dropdown-menu a {
                 padding: 1rem 0.5rem;
                 font-size: 0.8rem;
+                gap: 0.5rem;
             }
 
             .dropdown-menu-icon {
                 width: 32px;
                 height: 32px;
+            }
+
+            .dropdown-menu-close {
+                width: 35px;
+                height: 35px;
+                font-size: 1.3rem;
+            }
+
+            .mobile-menu-content {
+                width: 280px;
+                padding: 4.5rem 1.5rem 2rem;
+            }
+        }
+
+        /* Mobile Large (iPhone 14 Pro Max, etc.) */
+        @media (max-width: 480px) {
+            header {
+                padding: 0.6rem 1rem;
+            }
+
+            .logo-container {
+                gap: 0.75rem;
+            }
+
+            .logo-placeholder {
+                width: 35px;
+                height: 35px;
+            }
+
+            .theme-toggle svg {
+                width: 18px;
+                height: 18px;
+            }
+
+            .landing-section {
+                padding-top: 70px;
+            }
+
+            .landing-container {
+                padding: 1.5rem 1rem;
+                gap: 1.5rem;
+            }
+
+            .girl-image-placeholder {
+                max-width: 260px;
+                height: 350px;
+            }
+
+            .landing-content h1 {
+                font-size: clamp(1.75rem, 7vw, 2.5rem);
+                letter-spacing: 1px;
+            }
+
+            .landing-content h2 {
+                font-size: clamp(1.75rem, 7vw, 2.5rem);
+                margin-bottom: 1rem;
+            }
+
+            .landing-content .year {
+                font-size: 1.75rem;
+            }
+
+            .landing-content .subtitle {
+                font-size: 1.1rem;
+                margin-bottom: 1.25rem;
+            }
+
+            .student-info h3 {
+                font-size: 1.3rem;
+            }
+
+            .student-info p {
+                font-size: 1rem;
+            }
+
+            .golden-section {
+                padding: 3rem 1rem;
+            }
+
+            .golden-door {
+                width: 200px;
+                height: 270px;
+            }
+
+            .second-girl-placeholder img {
+                height: 340px;
+            }
+
+            .golden-section h3 {
+                font-size: 1.75rem;
+            }
+
+            .golden-section h4 {
+                font-size: 1rem;
+                padding: 0 0.5rem;
+            }
+
+            .carousel-section {
+                padding: 3rem 0;
+            }
+
+            .carousel-container {
+                padding: 1.5rem 1rem;
+                gap: 1.5rem;
+            }
+
+            .carousel-card {
+                min-width: 280px;
+            }
+
+            .carousel-image-placeholder {
+                height: 220px;
+            }
+
+            .carousel-card h4 {
+                font-size: 1.1rem;
+            }
+
+            .carousel-card p {
+                font-size: 0.85rem;
+            }
+
+            .carousel-card button {
+                padding: 0.65rem;
+                font-size: 0.9rem;
+            }
+
+            .campus-section {
+                min-height: 500px;
+            }
+
+            .campus-content {
+                padding: 1.5rem 1rem;
+            }
+
+            .campus-content h2 {
+                font-size: 1.75rem;
+                letter-spacing: 2px;
+                margin-bottom: 1.25rem;
+            }
+
+            .campus-text-box {
+                padding: 1.75rem 1.25rem;
+                border-radius: 15px;
+            }
+
+            .campus-text-box p {
+                font-size: 0.9rem;
+                line-height: 1.65;
+                margin-bottom: 1.25rem;
+            }
+
+            .text-preview {
+                max-height: 180px;
+            }
+
+            .text-preview::after {
+                height: 50px;
+            }
+
+            .read-more-btn {
+                padding: 0.55rem 1.25rem;
+                font-size: 0.9rem;
+                margin-top: 1.25rem;
+            }
+
+            .contact-section {
+                padding: 3.5rem 1rem;
+            }
+
+            .contact-container h2 {
+                font-size: clamp(2rem, 7vw, 2.5rem);
+                margin-bottom: 2.5rem;
+            }
+
+            .contact-grid {
+                gap: 2rem;
+            }
+
+            .contact-item h3 {
+                font-size: 2rem;
+                margin-bottom: 0.75rem;
+            }
+
+            .contact-item p {
+                font-size: 1.15rem;
+            }
+
+            .social-icons {
+                gap: 0.75rem;
+            }
+
+            .social-icons a {
+                width: 45px;
+                height: 45px;
+            }
+
+            .social-icons a img {
+                width: 26px;
+                height: 26px;
+            }
+
+            .footer {
+                font-size: 1.15rem;
+                padding-top: 2rem;
+            }
+
+            .dropdown-menu {
+                min-width: 95%;
+                padding: 1.75rem 1.25rem;
+                gap: 0.85rem;
+            }
+
+            .dropdown-menu a {
+                padding: 0.85rem 0.4rem;
+                font-size: 0.75rem;
+                gap: 0.4rem;
+                border-radius: 15px;
+            }
+
+            .dropdown-menu-icon {
+                width: 28px;
+                height: 28px;
+            }
+
+            .dropdown-menu-close {
+                width: 32px;
+                height: 32px;
+                font-size: 1.2rem;
+                top: 0.75rem;
+                right: 0.75rem;
+            }
+
+            .mobile-menu-content {
+                width: 260px;
+                padding: 4rem 1.25rem 1.75rem;
+            }
+
+            .mobile-menu-item > a,
+            .mobile-menu-item > button {
+                padding: 0.85rem;
+                font-size: 1rem;
+            }
+
+            .mobile-dropdown-submenu a {
+                padding: 0.65rem 0.85rem;
+                font-size: 0.9rem;
+            }
+        }
+
+        /* Mobile Small (iPhone SE, etc.) */
+        @media (max-width: 375px) {
+            .landing-content h1 {
+                font-size: clamp(1.5rem, 8vw, 2rem);
+            }
+
+            .landing-content h2 {
+                font-size: clamp(1.5rem, 8vw, 2rem);
+            }
+
+            .landing-content .year {
+                font-size: 1.5rem;
+            }
+
+            .landing-content .subtitle {
+                font-size: 1rem;
+            }
+
+            .student-info h3 {
+                font-size: 1.2rem;
+            }
+
+            .student-info p {
+                font-size: 0.95rem;
+            }
+
+            .girl-image-placeholder {
+                max-width: 240px;
+                height: 320px;
+            }
+
+            .golden-door {
+                width: 180px;
+                height: 250px;
+            }
+
+            .second-girl-placeholder img {
+                height: 310px;
+            }
+
+            .golden-section h3 {
+                font-size: 1.5rem;
+            }
+
+            .golden-section h4 {
+                font-size: 0.95rem;
+            }
+
+            .carousel-card {
+                min-width: 260px;
+            }
+
+            .carousel-image-placeholder {
+                height: 200px;
+            }
+
+            .campus-content h2 {
+                font-size: 1.5rem;
+            }
+
+            .campus-text-box {
+                padding: 1.5rem 1rem;
+            }
+
+            .campus-text-box p {
+                font-size: 0.85rem;
+            }
+
+            .contact-container h2 {
+                font-size: clamp(1.75rem, 8vw, 2rem);
+            }
+
+            .contact-item h3 {
+                font-size: 1.75rem;
+            }
+
+            .contact-item p {
+                font-size: 1.05rem;
+            }
+
+            .social-icons a {
+                width: 42px;
+                height: 42px;
+            }
+
+            .social-icons a img {
+                width: 24px;
+                height: 24px;
+            }
+
+            .footer {
+                font-size: 1.05rem;
+            }
+
+            .dropdown-menu {
+                padding: 1.5rem 1rem;
+                gap: 0.75rem;
+            }
+
+            .dropdown-menu a {
+                padding: 0.75rem 0.35rem;
+                font-size: 0.7rem;
+            }
+
+            .dropdown-menu-icon {
+                width: 26px;
+                height: 26px;
+            }
+
+            .mobile-menu-content {
+                width: 240px;
+            }
+        }
+
+        /* Landscape Mode for Mobile Devices */
+        @media (max-height: 500px) and (orientation: landscape) {
+            .landing-section {
+                padding-top: 60px;
+                min-height: auto;
+            }
+
+            .landing-container {
+                padding: 2rem 1rem;
+                grid-template-columns: 1fr 1fr;
+                gap: 1.5rem;
+            }
+
+            .girl-image-placeholder {
+                max-width: 200px;
+                height: 280px;
+            }
+
+            .landing-content h1 {
+                font-size: 1.75rem;
+            }
+
+            .landing-content h2 {
+                font-size: 1.75rem;
+                margin-bottom: 0.75rem;
+            }
+
+            .landing-content .year {
+                font-size: 1.5rem;
+            }
+
+            .landing-content .subtitle {
+                font-size: 1rem;
+                margin-bottom: 1rem;
+            }
+
+            .student-info h3 {
+                font-size: 1.2rem;
+            }
+
+            .student-info p {
+                font-size: 0.95rem;
+            }
+
+            .golden-section {
+                padding: 2.5rem 1rem;
+            }
+
+            .campus-section {
+                min-height: 400px;
+            }
+
+            .contact-section {
+                padding: 3rem 1rem;
+            }
+
+            .dropdown-menu {
+                grid-template-columns: repeat(4, 1fr);
+                padding: 1.5rem;
+            }
+
+            .mobile-menu-content {
+                padding: 3.5rem 1rem 1.5rem;
             }
         }
     </style>
